# wayland-demo

./: README.md  config.h  launch.json  meson.build  simple-egl-image.c  simple-egl.c  simple-shm.c
common/: buffer.c  buffer.h  display.c  display.h  registry.h  render.c  render.h  seat.h  surface.h  window.c  window.h
opengl/: egl.c  egl.h  opengl.c  opengl.h
protocol/: meson.build
shared/: os-compatibility.c  os-compatibility.h
uml-map/: simple-egl  simple-shm
